# slimformers

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml
src/slimformers/: __init__.py  discovery.py  lora.py  pruner.py
tests/: test_bert.py  test_core.py  test_mistral.py
