[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slimformers"
version = "0.0.1"
description = "Lightweight Optimization and Model Adaptation"
authors = [
  { name="Caden Chen", email="cadenc.woss@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
