[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slimformers"
version = "1.3.0"
description = "Lightweight Optimization and Model Adaptation"
authors = [
  { name="Caden Chen", email="cadenc.woss@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
  "torch>=2.0.0",
  "transformers>=4.38.0",
  "peft>=0.7.0",
  "rich>=13.0.0",
  "psutil>=5.9.0"
]

keywords = [
  "transformers",
  "LLM",
  "pruning",
  "LoRA",
  "PyTorch",
  "language model compression",
  "activation sparsity",
  "deep learning",
  "neural network optimization",
  "slim models",
  "BERT",
  "GPT-2",
  "LLaMA",
  "pruning library",
  "low-rank adaptation"
]

[tool.setuptools.packages.find]
where = ["src"]
